# spainn_documentation

./: README.md  pyproject.toml
docs/source/: atomistic_modules.rst  conf.py  data_pipeline.rst  index.rst  installation.rst  main.rst  usage.rst
